--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
+ro<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator-kwp</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Um Projeto Neuron Data Core" />
+    <meta name="author" content="Neuron" />
 
     <meta property="og:title" content="Calculator-kwp" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Um Projeto Neuron Data Core" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.ico" />
 
     
   </head>
