--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ ro<!DOCTYPE html>
     <meta property="og:title" content="Calculator-kwp" />
     <meta property="og:description" content="Um Projeto Neuron Data Core" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/favicon.ico" />
+    <meta property="og:image" content="/favicon" />
 
     
   </head>
