--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@ ro<!DOCTYPE html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator-kwp</title>
     <meta name="description" content="Um Projeto Neuron Data Core" />
-    <meta name="author" content="Neuron" />
+    <meta name="author" content="Neuron Data Core" />
 
     <meta property="og:title" content="Calculator-kwp" />
     <meta property="og:description" content="Um Projeto Neuron Data Core" />
-    <meta property="og:type" content="website" />
-    
-
-    
+    <meta property="og:type" content="website" />     
   </head>
 
   <body>
