--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <meta property="og:title" content="Calculator-kwp" />
     <meta property="og:description" content="Um Projeto Neuron Data Core" />
-    <meta property="og:type" content="website" />     
+    <meta property="og:type" content="website" />  
+    <meta property="og:image" content="/logoneuron.png" />
   </head>
 
   <body>
