--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Calculator-kwp" />
     <meta property="og:description" content="Um Projeto Neuron Data Core" />
     <meta property="og:type" content="website" />  
-    <meta property="og:image" content="/logoneuron.png" />
+    <meta property="og:image" content="/logokwp.png" />
   </head>
 
   <body>
